--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@reduxjs/toolkit": "^2.5.0",
     "@types/redux-persist": "^4.0.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
